# MacroClicker

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  plan.md  pyproject.toml  requirements.txt  settings.json
macroposflow/: __init__.py  config.py  executor.py  main.py  recorder.py  settings.json  settings.py  state_manager.py
macroposflow/cli/: __init__.py  consolemenu_cli.py
macroposflow/macros/: sample.json
macroposflow/tests/: run_tests.py  test_basic.py  test_config.py  test_executor.py  test_recorder.py
